fix overflow of top ad

--- a/base.less
+++ b/base.less
@@ -640,3 +640,8 @@ div.wikitext-quote {
   background: #f0f0f0;
   overflow: auto;
 }
+
+/* top ad */
+.main-content > div:first-of-type {
+  overflow:hidden;
+}
